# fetools

./: .gitignore  GEMINI.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tree.txt
.devcontainer/: devcontainer.json  setup.sh
.gemini/: settings.json
.github/: copilot-instructions.md
.github/skills/d1g1t-scripts/: SKILL.md
constants/: constants.py
data/configs/: partial_ownership_definitions.json  sma_definitions.json  sma_mapping.json
data/configs/PO_SMA/gresham/: po_sma.toml
data/configs/compliance/assante/: config.toml
data/configs/vnf/gresham/: vnf.toml
data/templates/: compliance_report.toml  partial_ownership_template.toml  po_sma.toml  vnf_loader.toml  vnf_template.toml
data/templates/payloads/: cph_table.json  transactions.json  trend_aum.json
fetools/: api_importer.py  client_params.py  get_eom_data.py  importer.py  local_importer.py  s3_importer.py
preprocess/historical_recon/: gresham.py
preprocess/po_recon/: gresham.py
preprocess/vnf/: gresham.py
scripts/: historical_recon.py  po_recon.py  po_sma_loader.py  vnf_v52.py
src/: config_generator.py  po_sma.py
src/fetools/: __init__.py  base_main.py  compliance_report.py  po_sma.py  po_sma_loader.py  po_sma_processor.py  po_sma_tools.py  toml_to_dataclass.py  vnf.py
src/fetools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fetools/api/: __init__.py  base_main.py
src/fetools/cli/: main.py
src/fetools/preprocess/: gresham.py
src/fetools/scripts/: base_main.py  compliance_report.py  d1g1tparser.py  po_sma_loader.py  vnf_v52.py
src/fetools/tools/: __init__.py  compliance_report.py  download_cph.py  download_trend_aum.py  po_sma.py  po_sma_loader.py  po_sma_recon.py  transfer_values.py  vnf.py  vnf_loader.py  vnf_migration.py
src/fetools/transformers/: __init__.py
src/fetools/utils/: __init__.py  anonimyze_dataset.py  exceptions.py  po_sma_tools.py
src/preprocess/: gresham.py
tests/: test_anonimyze_dataset.py
tools/: get_eom_data.py  s3_importer.py
