[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetools"
version = "0.1.0"
description = "FE Tools: general financial engineering tools for our daily routines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data processing
    "pandas>=2.2",
    "numpy>=1.26",
    
    # AWS/S3 integration
    "awswrangler>=2.20",
    
    # API clients
    "django-rest-framework-client>=0.12",
    "requests>=2.32",
    
    # Config parsing
    "dataclass-binder>=0.3",
    
    # CLI
    "typer>=0.12",
    
    # Utilities
    "tqdm>=4.66",
    "multiprocess>=0.70",
    "python-dateutil>=2.8",
    "xlsxwriter>=3.0",
]

[project.scripts]
fetools = "fetools.cli.main:main"


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.8",
    "mypy>=1.11",
    "types-requests>=2.32",
    "pandas-stubs>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fetools"]

[tool.black]
line-length = 78
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "multiprocess.*",
    "dataclass_binder.*",
    "drf_client.*",
]
ignore_missing_imports = true
