[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetools"
version = "0.1.0"
description = "FE Tools: general financial engineering tools for our daily routines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "awswrangler>=2.20",
    "fsspec>=2024.9",
    "s3fs>=2024.9",
    "django-rest-framework-client>=0.12",
    "tomlkit>=0.13",
    "requests>=2.32",
    "tqdm>=4.66",
    "multiprocess>=0.70",
    "python-dateutil>=2.8",
    "xlsxwriter>=3.0",
    "dataclass-binder>=0.1.7",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.8",
    "mypy>=1.11",
    "types-requests>=2.32",
    "pandas-stubs>=2.2",
]

[project.scripts]
compliance-report = "fetools.tools.compliance_report:main"
vnf-loader = "fetools.tools.vnf_loader:main"
transfer-values = "fetools.tools.transfer_values:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fetools"]

[tool.black]
line-length = 78
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "multiprocess.*"
ignore_missing_imports = true
